# HB

./: main.py  pyproject.toml  requirements.txt
Backend/: .env.example  pyproject.toml
Backend/app/: main.py  manager.py
Backend/app/api/: __init__.py  endpoints.py  ws_endpoints.py
Backend/app/core/: ws_manager.py
Backend/templates/: index.html
DB/: docker-compose.yml
DB/migration/: env.py
DB/migration/versions/: c17bc387dba7_add_table_reactions_and_systemlog.py
DB/src/db/: __init__.py  config.py
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: endpoints.py  ws_endpoints.py
backend/app/core/: ws_manager.py
backend/app/db/: manager.py
backend/app/migration/: env.py
backend/templates/: admin.html
db/: .env.example  pyproject.toml
db/migration/versions/: 207d81790aef_add_token_for_table_user.py  7e9670d9efdf_initial_revision.py
db/src/db/: models.py  types.py
