[project]
name = "hb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "db",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "greenlet>=3.3.0",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.45",
    "websockets>=15.0.1",
]

[tool.uv.sources]
db = { path = "./DB" }
